<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">인디카튜닝</string>
    <string name="indiparts">인디파츠</string>
    <string name="share">앱 공유하기</string>

    <!-- 튜토리얼 -->
    <string name="skip">건너뛰기</string>
    <string name="start">시작하기</string>
    <string name="welcome_tab_tuning">가상튜닝</string>
    <string name="welcome_tab_community">커뮤니티</string>

    <string name="welcome_main_text_tuning">원하는 차량을 선택하세요!</string>
    <string name="welcome_main_text_unity">자유로운 3D 환경에서\n가상튜닝을 즐길 수 있습니다.</string>
    <string name="welcome_main_text_community">게시물을 작성하고, 유저들과 소통하세요!</string>

    <string name="welcome_sub_text_tuning">새로운 차량, 부품 추가는 공지사항을 참고하세요.</string>
    <string name="welcome_sub_text_unity">실제 시장의 부품들을 마음껏 입혀보세요.</string>
    <string name="welcome_sub_text_community">차종별로 다양한 게시물을 볼 수 있습니다.</string>

    <!-- 공지 -->
    <string name="notice">공지사항</string>

    <!-- Drawer 메뉴 -->
    <string name="drawer_menu_title">무엇을 도와드릴까요?</string>
    <string name="drawer_menu_subtitle">이용하려는 기능을 선택해주세요.</string>
    <string name="how_to_use_title">이용방법</string>
    <string name="how_to_use_subtitle">앱의 이용방법 보기</string>
    <string name="partnership_title">제휴요청</string>
    <string name="partnership_subtitle">회사에 제휴요청하기</string>
    <string name="suggest_title">1:1 문의</string>
    <string name="suggest_subtitle">궁금한 점 및 개선사항 문의하기</string>
    <string name="terms_title">이용약관</string>
    <string name="terms_subtitle">앱 및 컨텐츠 이용약관 보기</string>
    <string name="version_title">버전정보</string>
    <string name="version_subtitle">현재버전 v.1.0.0</string>
    <string name="contact">Indicar Tuning, indicar_tuning@naver.com</string>
    <string name="copyright">Copyright 2017. Indicar Tuning All Rights Reserved.</string>
    <string name="str_loadingtitle">당신의 차량에서 비롯되는\n차별화된 감성의 시작</string>

    <!-- 환경설정 -->
    <string name="notification_setting">알림 설정</string>
    <string name="event_alarm_title">이벤트 알림</string>
    <string name="event_alarm_subtitle">이벤트, 프로모션 알림</string>
    <string name="notice_alarm_title">공지사항 알림</string>
    <string name="notice_alarm_subtitle">차량 및 부품 업데이트 알림</string>
    <string name="language_setting">언어 설정</string>
    <string name="manage_account">계정 관리</string>
    <string name="korean">한국어</string>
    <string name="english">English</string>
    <string name="default_setting">기본 설정</string>
    <string name="account_setting">계정 설정</string>

    <string name="go_to_shopping">쇼핑몰 바로가기</string>
    <string name="go_to_facebook">페이스북 페이지 바로가기</string>
    <string name="go_to_youtube">유튜브 바로가기</string>
    <string name="recommend_to_friends">친구에게 추천하기</string>

    <!-- 게시물 -->
    <string name="comment">댓글</string>
    <string name="like">좋아요</string>

    <!-- 게시물 필터 -->
    <string name="all">all</string>
    <string name="daylife">daylife</string>
    <string name="market">market</string>
    <string name="diy">diy</string>
    <string name="ko">ko</string>
    <string name="en">en</string>
    <string name="ru">ru</string>

    <string name="filter_all">전체</string>
    <string name="filter_daylife">자유, 일상</string>
    <string name="filter_market">중고, 판매</string>
    <string name="filter_diy">시공, DIY</string>

    <string name="board_list_empty">등록된 게시물이 없습니다.</string>

    <!-- 게시물 검색 -->
    <string name="search_box">검색어를 입력하세요.</string>
    <string name="search_filter_board">게시물 유형을 선택하세요.</string>
    <string name="search_filter_language">언어/국가를 선택하세요.</string>

    <!-- 글 작성-->
    <string name="board_filter_hint">어떤 이야기가 하고싶나요?</string>
    <string name="image_filter_hint">사진을 추가해주세요.</string>
    <string name="image_empty">선택된 사진이 없습니다.</string>
    <string name="write_content_hint">내용을 입력해주세요.</string>
    <string name="picture_list_empty">사진을 선택해주세요.</string>
    <string name="board_write_hint">내용을 입력하세요.</string>
    <string name="next">다음으로</string>
    <string name="cancel">취소하기</string>
    <string name="submit">등록하기</string>
    <string name="board_upload_success">게시물 등록이 완료되었습니다.</string>
    <string name="board_update_success">게시물 수정이 완료되었습니다.</string>
    <string name="board_upload_fail">게시물 등록에 실패하였습니다. 다시 시도해주세요.</string>
    <string name="board_update_fail">게시물 수정에 실패하였습니다. 다시 시도해주세요.</string>
    <string name="board_delete_done">게시물이 삭제되었습니다.</string>

    <!-- 앨범 선택 -->
    <string name="total">전체</string>

    <!-- 댓글 -->
    <string name="comment_empty">첫 번째로 댓글을 남겨보세요!</string>
    <string name="comment_box">댓글을 입력하세요.</string>
    <string name="comment_more">댓글 더보기 +</string>
    <string name="done">완료</string>
    <string name="comment_deleted">댓글 1개가 삭제되었습니다.</string>

    <!-- 내 계정 -->
    <string name="account_tab_like">좋아요</string>
    <string name="account_tab_my_board">내 게시물</string>
    <string name="account_tab_cart">찜목록</string>
    <string name="account_tab_more">더보기</string>
    <string name="coming_soon">준비중인 기능입니다.\n차후 업데이트에서 만나보실 수 있습니다!</string>

    <!-- 쇼핑 -->
    <string name="shopping_title_best">베스트 상품</string>
    <string name="shopping_title_new">신상품</string>
    <string name="shopping_title_more">더보기</string>

    <string name="shopping_tab_home">쇼핑홈</string>
    <string name="shopping_tab_best">베스트</string>
    <string name="shopping_tab_new">신상품</string>
    <string name="shopping_tab_kona">코나</string>
    <string name="shopping_tab_sonata">소나타</string>
    <string name="shopping_tab_avante">아반떼</string>
    <string name="shopping_tab_qm6">QM6</string>

    <!-- 계정 관련 -->
    <string name="sign_up">회원가입</string>
    <string name="sign_out">로그아웃</string>
    <string name="remove_account">회원탈퇴</string>
    <string name="email">이메일</string>
    <string name="editNameTitle">이름 (닉네임)</string>
    <string name="editNameHint">이름 또는 닉네임을 입력하세요.</string>
    <string name="send_auth_email">인증 메일 전송하기</string>
    <string name="resend_auth_email">인증 메일 다시 전송하기</string>
    <string name="login_with_google">구글 계정으로 로그인</string>
    <string name="login_with_fb">페이스북 계정으로 로그인</string>
    <string name="login_with_kakao">카카오 계정으로 로그인</string>
    <string name="login_with_line">라인 계정으로 로그인</string>
    <string name="strTooLongNickname">닉네임은 띄어쓰기를 제외하고 한글 10자, 영어 20자 이내여야 합니다.</string>
    <string name="strTooShortNickname">닉네임은 띄어쓰기를 제외하고 한글 2자, 영어 4자 이상이어야 합니다.</string>
    <string name="strLogoutSuccess">로그아웃 처리되었습니다.</string>

    <!-- 다이얼로그 -->
    <string name="dialog_agree">동의합니다.</string>
    <string name="dialog_cancel">취소합니다.</string>
    <!-- 유니티 다운로드 -->
    <string name="dialog_unity1">※ 차량을 내려받습니다. 소량의 데이터 통화료가 발생합니다.</string>
    <string name="dialog_unity1_sub">WIFI 환경에서 진행하는 것을 권장합니다. 한 번 차량을 다운받으시면, 다음부터는 로딩 없이 이용 가능합니다.\n(단, 업데이트가 있을 경우 제외)</string>
    <string name="dialog_unity2">※ 프로그램 실행을 위해 카메라 및 내장 메모리 접근 권한이 필요합니다.</string>
    <string name="dialog_unity2_sub">필수 권한을 거절하시면 이용하실 수 없습니다. [설정] > [권한] 에서 권한을 허용할 수 있습니다.</string>
    <string name="strcannotCamera">외장 메모리가 지원되야 카메라 기능을 사용하실 수 있습니다. \n[설정] > [권한] 에서 권한을 허용할 수 있습니다.</string>
    <string name="dialog_unity_sub">앞으로 나오는 모든 이미지와 기타 결과물은 상업적 용도로 사용하실 수 없으며, 그 권리는 자사와 기타 업체들에게 있습니다. 이용을 원하시는 경우, 문의를 남겨주시기 바랍니다. 상업적 용도 외에 개인적인 사용은 허가합니다. 감사합니다.</string>
    <!-- 회원탈퇴 -->
    <string name="dialog_delete_account">회원탈퇴 후에는 계정 복구가 불가능합니다.</string>
    <string name="dialog_delete_account_sub">정말로 회원을 탈퇴하시겠습니까?</string>
    <!-- 글 작성 취소 -->
    <!-- 게시글 삭제-->
    <string name="dialog_delete_board">삭제된 글은 복구가 불가능합니다.</string>
    <string name="dialog_delete_board_sub">게시글을 삭제하시겠습니까?</string>

    <string name="facebook_app_id">1228514043878949</string>
    <string name="kakao_app_key">be2b15c91901a83730e1cc907a1ab965</string>
    <string name="line_channel_id">1586805168</string>

    <string name="strVersionErr">버전이 맞지 않습니다.</string>
    <string name="strNoInternet">기기가 인터넷에 연결되지 않았습니다. 인터넷에 연결해주십시오.</string>
    <string name="strLoginedErr">로그인 정보를 제대로 불러오지 못했습니다. 다시 로그인해주세요.</string>
    <string name="strNoCar">아직 등록된 자동차가 없습니다.</string>
    <string name="strErrwithCode">오류가 발생했습니다: </string>
    <string name="strServerCheck">서버 점검중입니다.</string>
    <string name="strBackpressed">뒤로 버튼을 한 번 더 누르시면 종료됩니다.</string>
    <string name="strgetUserInfoError">유저 정보를 불러오지 못했습니다: </string>
    <string name="strPermissionDenied">필수 권한을 거절하시면 앱을 이용하실 수 없습니다.\n[설정] > [권한] 에서 권한을 허용할 수 있습니다.</string>
    <string name="strWhatPermissionDeny">권한 거부\n</string>
    <string name="makingList">리스트 생성중...</string>
    <string name="tuning2Hint">브랜드 및 차량을 검색하세요.</string>
    <string name="strAddUserAlarm1">반갑습니다, </string>
    <string name="strAddUserAlarm2">님!</string>
    <string name="strSaveChanges">변경내용을 저장하는중...</string>
    <string name="strJoinProcess">회원가입 처리 중...</string>
    <string name="strLoginProcess">로그인 중...</string>
    <string name="strWritingPost">작성한 글을 올리는 중입니다. 잠시 기다려주세요......</string>
    <string name="strWannaChangeLang">언어를 변경하려면 앱을 재시작해야 합니다.\n재시작하시겠습니까?</string>
    <string name="strRestart">재시작</string>
    <string name="strReSCancel">취소</string>
    <string name="strShoppingWillOpen">The shopping mall will open soon!</string>

    <string name="strKakaoLoginStop">카카오톡 로그인을 중지합니다: </string>
    <string name="strAddUserFail">해당 이메일로 가입된 계정이 이미 존재합니다. 원래 계정으로 로그인 해주시기 바랍니다.</string>
    <string name="strRequestEmailSent">입력하신 이메일로 인증 메일을 보냈습니다. 메일함을 확인해주세요.</string>
    <string name="strRequestEmailWait">이메일 인증이 완료되지 않았습니다. 메일함을 확인해주세요.</string>
    <string name="strRequestEmailCancel">이용자께서 다른 이메일 인증을 요청한 관계로 기존의 이메일 인증이 취소되었습니다. 새로 회원가입 해주세요.</string>
    <string name="strRequestEmailError">이메일 인증 과정에서 오류가 발생했습니다. 다시 시도해 주세요. 이용에 불편을 드려 죄송합니다.</string>
    <string name="strEmailexisted1">해당 이메일로 가입한 계정이 존재합니다.(</string>
    <string name="strEmailexisted2">) 원래 계정으로 로그인 해주시기 바랍니다.</string>
    <string name="strEmailexisted3">) 다른 이메일을 입력해 주시기 바랍니다.</string>
    <string name="strSignoutErr">회원탈퇴 과정에서 오류가 발생했습니다. 다시 시도해 주세요.</string>
    <string name="strSignoutSuccess">회원탈퇴에 성공했습니다. 이용해 주셔서 감사합니다.</string>
    <string name="strAddUserErr">회원가입 처리 도중 오류가 발생하였습니다. 다시 시도해 주세요.</string>

    <string name="facebookGraphApi">"https://graph.facebook.com/"</string>
    <string name="strTermsUrl">https://m.cafe.naver.com/ArticleRead.nhn?clubid=29539791&amp;articleid=11&amp;page=1&amp;boardtype=L</string>
    <string name="strPartnership">https://m.cafe.naver.com/ArticleList.nhn?search.clubid=29539791&amp;search.menuid=31&amp;search.boardtype=L</string>
    <string name="strContact">https://m.cafe.naver.com/ArticleList.nhn?search.clubid=29539791&amp;search.menuid=28&amp;search.boardtype=Q</string>
    <string name="strIndicarEmail">indicar_tuning@naver.com</string>
    <string name="strShoppingMall">https://smartstore.naver.com/indiparts</string>
    <string name="bannerShopping1">http://13.125.173.118:9000/upload/community/1544171979987.png</string>
    <string name="bannerShopping2">http://13.125.173.118:9000/upload/community/1544172097463.png</string>
    <string name="bannerShopping3">http://13.125.173.118:9000/upload/community/1544172134478.PNG</string>

</resources>