<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="@dimen/padding_small"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:layout_width="@dimen/profile_image_size_small"
        android:layout_height="@dimen/profile_image_size_small"
        app:srcCompat="@drawable/icon_network"/>

    <TextView
        android:layout_marginTop="@dimen/padding_large"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_size_medium"
        android:textColor="@color/black"
        android:text="@string/dialog_unity1"/>

    <TextView
        android:layout_margin="@dimen/padding_ultra_small"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_size_small"
        android:textColor="@color/black"
        android:text="@string/dialog_unity1_sub"/>

    <TextView
        android:layout_marginTop="@dimen/padding_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_size_medium"
        android:textColor="@color/black"
        android:text="@string/dialog_unity2"/>

    <TextView
        android:layout_margin="@dimen/padding_ultra_small"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_size_small"
        android:textColor="@color/black"
        android:text="@string/dialog_unity2_sub"/>

    <TextView
        android:layout_marginTop="@dimen/padding_large"
        android:layout_marginBottom="@dimen/padding_large"
        android:layout_marginLeft="@dimen/padding_ultra_small"
        android:layout_marginRight="@dimen/padding_ultra_small"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_size_small"
        android:text="@string/dialog_unity_sub"/>

</LinearLayout>